# game_of_life

./: .gitignore  README.md  converter.py  main.py  pyproject.toml
data/themes/: theme.json
game_of_life/src/: painter.py
grid_states/: bomb.state  david_hilbert.state  new.state  painter.py  questions.state  write.state
grid_states/rule_defaults/: game_of_life_rule.state  rule_30.state
src/: __init__.py  cell_grid.py  cellular_automata.py  cellular_automata_app.py  colours.py  game_of_life.py  game_of_life_basic_app.py  game_of_life_basic_test.py  painter.py  rules.py  shape_tool.py  stamp_tool.py  test_cellular_automata.py
src/shapes/: Bomb.json  DavidHilbert.json  GliderGun.json  Gun.json  gospel_glider_gun.py
src/src/: cellular_automata_app.py
