[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "Pygame implementation of Conway's Game of Life"
authors = ["Sean Nelson <ll17s2n@leeds.ac.uk>"]
readme = "README.md"
packages = [{ include = "game_of_life" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pygame = "^2.3.0"
pytest = "^7.2.2"
pygame-gui = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
game-of-life = "game_of_life.main:run"